// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EnumType transform Explicit Enum - auth 1`] = `
"type File @model @auth(rules: [{allow: public, provider: apiKey}])
{
  accessLevel: AccessLevel @auth(rules: [{allow: owner, ownerField: "owner"}])
}

enum AccessLevel {
  public
  protected
  private
}"
`;

exports[`EnumType transform Explicit Enum - required 1`] = `
"type File @model @auth(rules: [{allow: public, provider: apiKey}])
{
  accessLevel: AccessLevel!
}

enum AccessLevel {
  public
  protected
  private
}"
`;

exports[`EnumType transform Explicit Enum 1`] = `
"type File @model @auth(rules: [{allow: public, provider: apiKey}])
{
  accessLevel: AccessLevel
}

enum AccessLevel {
  public
  protected
  private
}"
`;

exports[`EnumType transform Implicit Enum 1`] = `
"type File @model @auth(rules: [{allow: public, provider: apiKey}])
{
  accessLevel: FileAccessLevel
}

enum FileAccessLevel {
  public
  protected
  private
}"
`;
